@@ -399,6 +399,10 @@ $_prefs['vfolder'] = array(
 
 $_prefs['filter'] = array(
     // 'value' => serialize(array(
+    //     // Attachments filter, enabled by default
+    //     new IMP_Search_Filter_Attachment(array(
+    //         'disable' => false
+    //     )),
     //     // Bulk filter, enabled by default
     //     new IMP_Search_Filter_Bulk(array(
     //         'disable' => false
@@ -406,9 +410,13 @@ $_prefs['filter'] = array(
     //     // Mailing list filter, enabled by default
     //     new IMP_Search_Filter_Mailinglist(array(
     //         'disable' => false
+    //     )),
+    //     // Personal filter, enabled by default
+    //     new IMP_Search_Filter_Personal(array(
+    //         'disable' => false
     //     ))
     // ))
-    'value' => 'a:3:{i:0;C:22:"IMP_Search_Filter_Bulk":30:{a:2:{s:1:"e";i:1;s:1:"v";i:1;}}i:1;C:29:"IMP_Search_Filter_Mailinglist":30:{a:2:{s:1:"e";i:1;s:1:"v";i:1;}}i:2;C:26:"IMP_Search_Filter_Personal":30:{a:2:{s:1:"e";i:1;s:1:"v";i:1;}}}'
+    'value' => 'a:4:{i:0;C:28:"IMP_Search_Filter_Attachment":30:{a:2:{s:1:"e";i:1;s:1:"v";i:1;}}i:1;C:22:"IMP_Search_Filter_Bulk":30:{a:2:{s:1:"e";i:1;s:1:"v";i:1;}}i:2;C:29:"IMP_Search_Filter_Mailinglist":30:{a:2:{s:1:"e";i:1;s:1:"v";i:1;}}i:3;C:26:"IMP_Search_Filter_Personal":30:{a:2:{s:1:"e";i:1;s:1:"v";i:1;}}}'
 );
 
 
